--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header Section Start -->
+    <header class="bg-sky-500 flex justify-center">  
+        <div class="text-center my-auto ml-10">
+            <h1 class="text-4xl font-semibold text-white">Select Your Best Player</h1>
+            <p class="pt-5 font-medium text-white">
+                Football is a word which could mean one of several sports. The best-known type of <br> football is association football. This is called "soccer" in <br> North America, South Africa, and Australia to avoid confusion with other types of <br> football that are commonly played there.
+            </p>
+        </div>
+    </header>
+    <!-- Header Section End -->
     
 </body>
 </html>
