--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="flex">
         <!-- Players Image And Name Section Start -->
         <section>
-            <div class="flex ml-80 mt-8 pb-10">
+            <div class="flex ml-64 mt-8 pb-10">
                 <div class="w-64 h-96 bg-black rounded-lg text-center">
                     <img class="rounded-lg player-img" src="images/img1.png" alt="img">
                     <h1 class="text-2xl font-semibold text-white mt-3 player-name" id="playerName1">Lionel Messi</h1>
@@ -44,7 +44,7 @@
                     <button class="px-20 py-2 bg-blue-500 text-white mt-6 select-btn button-color" id="playerBtn3">Select</button>
                 </div>
             </div>
-            <div class="flex ml-80 pb-10">
+            <div class="flex ml-64 pb-10">
                 <div class="w-64 h-96 bg-black rounded-lg text-center">
                     <img class="player-img" src="images/img4.jpg" alt="img">
                     <h1 class="text-2xl font-semibold text-white mt-3 player-name" id="playerName4">Kevin De Bruyne</h1>
@@ -64,7 +64,7 @@
                     <button class="px-20 py-2 bg-blue-500 text-white mt-6 select-btn button-color" id="playerBtn6">Select</button>
                 </div>
             </div>
-            <div class="flex ml-80 pb-10">
+            <div class="flex ml-64 pb-10">
                 <div class="w-64 h-96 bg-black rounded-lg text-center">
                     <img class="player-img" src="images/img7.jpg" alt="img">
                     <h1 class="text-2xl font-semibold text-white mt-3 player-name" id="playerName7">Riyad Mahrez</h1>
@@ -115,7 +115,7 @@
         
                   <div>
                     <button id="calculateBtn"
-                      class="items-center w-full py-2 px-16 text-1xl font-medium text-center text-white button-color hover:bg-blue-900 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 mb-4">
+                      class="items-center w-full py-2 px-16 text-1xl font-medium text-center text-white button-color  mb-4">
                       <span class="px-2.5">Calculate</span>
                     </button>
                   </div>
@@ -139,11 +139,11 @@
                   </div>
                   <div>
                     <button id="totalCostBtn"
-                      class="items-center w-full py-2 px-12 text-1xl font-medium text-center text-white buton-color hover:bg-blue-900 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 mb-4">
+                      class="items-center w-full py-2 px-12 text-1xl font-medium text-center text-white button-color  mb-4">
                       Calculate Total
                     </button>
                     <div class="flex">
-                      <p class="text-amber-600 text-lg mr-auto font-bold">Player Expenses</p>
+                      <p class="text-white text-lg mr-auto font-bold">Player Expenses</p>
                       <p class="text-white text-lg text-left">$<span id="totalCost">0000</span></p>
                     </div>
                   </div>
